MLOps-Gen: Bump version to 1.0.1 and update CI workflows
- Updated version in pyproject.toml to 1.0.1 and refined license information format.
- Modified CI workflow to install specific dependencies directly instead of using editable installs.
- Enhanced publish workflow to streamline package installation and testing processes.

Signed-off-by: NotHarshhaa <reddyharshhaa12@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,10 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "mlops-project-generator"
-version = "1.0.0"
+version = "1.0.1"
 description = "A CLI tool that generates production-ready MLOps project templates for Scikit-learn, PyTorch, and TensorFlow"
 readme = "README.md"
-license = "MIT"
-license-files = ["LICENSE"]
+license = {text = "MIT"}
 authors = [
     {name = "HARSHHAA", email = "contact@example.com"}
 ]
