--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -e ".[dev]"
+        pip install pytest pytest-cov black isort flake8 mypy
 
     - name: Run tests
       run: |
@@ -59,7 +59,9 @@ jobs:
     - name: Install package
       run: |
         python -m pip install --upgrade pip
-        pip install -e .
+        pip install build
+        python -m build
+        pip install dist/*.whl
 
     - name: Test CLI commands
       run: |
