--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,8 +35,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install build twine wheel
-        pip install -e ".[dev]"
+        pip install build twine wheel pytest pytest-cov black isort flake8 mypy
 
     - name: Run tests
       run: |
