--- a/pyproject.toml
+++ b/pyproject.toml
@@ -135,3 +135,7 @@ exclude_lines = [
     "class .*\\bProtocol\\):",
     "@(abc\\.)?abstractmethod",
 ]
+
+[tool.flake8]
+max-line-length = 88
+extend-ignore = ["E501", "F401"]
