MLOps-Gen: Refactor project structure with new web API and UI components
- Removed existing CI, GitHub Pages, and PyPI workflows to streamline the project.
- Introduced a FastAPI backend for the MLOps Project Generator, enabling project template generation via a web interface.
- Added a new Next.js frontend with a responsive design and user-friendly forms for project configuration.
- Implemented various UI components and styles using Tailwind CSS for improved aesthetics and usability.
- Created a comprehensive README for setup and usage instructions.

Signed-off-by: NotHarshhaa <reddyharshhaa12@gmail.com>

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -12,8 +12,9 @@ recursive-include generator *.py
 # Include tests
 recursive-include tests *.py
 
-# Exclude docs folder from PyPI package
-prune docs
+# Exclude web UI and API from PyPI package
+prune web_api
+prune web_ui
 
 # Include configuration files
 include .github/workflows/*.yml
