MLOps-Gen: Add FastAPI backend and project generation API
- Introduced a new FastAPI backend for the MLOps Project Generator, providing a RESTful API for project template generation.
- Implemented endpoints for project configuration, generation, task status retrieval, and file download.
- Created a `requirements.txt` for backend dependencies and updated the frontend environment configuration.
- Removed legacy HTTP server code from the frontend and streamlined the project structure for better maintainability.

Signed-off-by: NotHarshhaa <reddyharshhaa12@gmail.com>

--- a/web_ui/package.json
+++ b/web_ui/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "dev:auto": "node start-dev.js",
-    "dev:backend": "python api.py",
+    "dev:backend": "python ../backend/api.py",
     "dev:frontend": "next dev",
     "build": "next build",
     "start": "next start",
